--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="col-lg-6 col-about col-fm">
           <h2>My Self</h2>
-          <p class="below-tk">A self-motivated computer geek, and effective programmer seeking an opportunity to solve the real world problems in a collaborative, and dynamic workplace.</p>
+                    <p class="self"><i>A self-motivated computer geek, and effective programmer seeking an opportunity to solve the real world problems in a collaborative, and dynamic workplace.</i></p>
         </div>
         <div class="col-lg-6 col-about">
           <h2 class="col-fm">Technical Skills</h2>
