--- a/index.html
+++ b/index.html
@@ -60,16 +60,18 @@
 
         <div class="col-lg-6 col-about col-fm">
           <h2>My Self</h2>
-                    <p class="self"><i>A self-motivated computer geek, and effective programmer seeking an opportunity to solve the real world problems in a collaborative, and dynamic workplace.</i></p>
+          <p class="self"><i>A self-motivated computer geek, and effective programmer seeking an opportunity to solve the real world problems in a collaborative, and dynamic workplace.</i></p>
         </div>
         <div class="col-lg-6 col-about">
           <h2 class="col-fm">Technical Skills</h2>
+          <div class="st">
+            <p><strong class="st">Languages: </strong>Java, C, Python, HTML & CSS </p>
+            <p><strong class="st">IT Construct: </strong>DS and Algorithms, OOPS, OS and DBMS</p>
+            <p><strong class="st">Development Tools: </strong>Microsoft Visual Studio, Atom, Sublime, Netbeans and Android Studio</p>
+            <p><strong class="st">Framework: </strong>React and Bootstrap</p>
+            <p><strong class="st">Databases: </strong>SQL and Mondgo DB</p>
+          </div>
 
-          <p><strong class="st">Languages: </strong>Java, C, Python, HTML & CSS </p>
-          <p><strong class="st">IT Construct: </strong>DS and Algorithms, OOPS, OS and DBMS</p>
-          <p><strong class="st">Development Tools: </strong>Microsoft Visual Studio, Atom, Sublime, Netbeans and Android Studio</p>
-          <p><strong class="st">Framework: </strong>React and Bootstrap</p>
-          <p><strong class="st">Databases: </strong>SQL and Mondgo DB</p>
         </div>
 
 
